# parse_gflags

./: .gitignore  CMakeLists.txt  README.md  flags.json  parse_flags.py
src/: bar.cpp  bar.h  bar_flags.cpp  bar_flags.h  foo.cpp  foo.h  foo_flags.cpp  foo_flags.h  main.cpp  main_flags.cpp  main_flags.h
